# proj-pdv

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 0001_schema_inicial.py
src/: main.py
src/config/: seed_demo.py  settings.py
src/core/entidades/: enums.py  item_pedido.py  pedido.py
src/core/eventos/: alerta_estoque.py
src/core/excecoes/: __init__.py  estoque.py  pedido.py
src/core/interfaces/: fila_pedidos_port.py  ingrediente_repository.py  item_vendavel.py  publicador_eventos.py
src/infrastructure/: model_registry.py
src/infrastructure/mensageria/: fila_pedidos_rabbitmq.py
src/modules/caixa/infraestrutura/: modelos.py  repositorios.py
src/modules/catalogo/aplicacao/: casos_uso.py
src/modules/catalogo/infraestrutura/: repositorios.py
src/modules/cozinha/api/: esquemas.py  rotas.py
src/modules/cozinha/infraestrutura/: consumer.py
src/modules/estoque/aplicacao/: estoque_service.py
src/modules/mesas/infraestrutura/: modelos.py
src/modules/operadores/infraestrutura/: modelos.py
src/modules/pedidos/api/: esquemas.py  rotas.py
src/modules/pedidos/aplicacao/: criar_pedido_use_case.py  dtos.py
src/modules/pedidos/infraestrutura/: modelos.py  repositorios.py
tests/: conftest.py  test_main.py
tests/integracao/: test_criar_pedido_use_case.py
tests/unitarios/: test_entidade_pedido.py  test_estoque_service.py
