[project]
name = "proj-pdv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.5.1",
    "fastapi>=0.138.0",
    "httpx2>=2.4.0",
    "mypy>=2.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
